Added more tables to 3.3

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -443,15 +443,15 @@ The architecture of the web application to develop is documented indicating the 
 <table>
   <tr>
     <th>URL</th>
-    <td>/dashboard_my_projects/{id}</td>
+    <td colspan="2">/dashboard_my_projects/{id}</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Shows user's projects.</td>
+    <td colspan="2">Shows user's projects.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td>GET</td>
+    <td colspan="2">GET</td>
   </tr>
   <tr>
     <th>Parameters</th>
@@ -460,11 +460,11 @@ The architecture of the web application to develop is documented indicating the 
   </tr>
   <tr>
     <th>UI</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui08-dashboard-my-projects">UI08</a></td>
+   <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui08-dashboard-my-projects">UI08</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td>USR</td>
+    <td colspan="2">USR</td>
   </tr>
 </table>
 
@@ -472,15 +472,15 @@ The architecture of the web application to develop is documented indicating the 
 <table>
   <tr>
     <th>URL</th>
-    <td>/dashboard_my_tasks/{id}</td>
+    <td colspan="2">/dashboard_my_tasks/{id}</td>
   </tr>
   <tr>
     <th>Description</th>
-    <td>Shows user's tasks.</td>
+    <td colspan="2">Shows user's tasks.</td>
   </tr>
   <tr>
     <th>Method</th>
-    <td>GET</td>
+    <td colspan="2">GET</td>
   </tr>
   <tr>
     <th>Parameters</th>
@@ -489,11 +489,11 @@ The architecture of the web application to develop is documented indicating the 
   </tr>
   <tr>
     <th>UI</th>
-    <td><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui09-dashboard-my-tasks">UI09</a></td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui09-dashboard-my-tasks">UI09</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
-    <td>USR</td>
+    <td colspan="2">USR</td>
   </tr>
 </table>
 
@@ -503,63 +503,30 @@ The architecture of the web application to develop is documented indicating the 
 #### Endpoints of Module Projects and Project Settings
 
 - R301: View Project Tasks ```/dashboard_my_projects/{id}/{idProject}/tasks``` <!-- TODO -->
-- R302: View Project Forum ```/dashboard_my_projects/'project_name'/project_forum``` <!-- TODO -->
-- R303: View Project Dashboard ```/dashboard_my_projects/'project_name'/project_dashboard(project_options)``` <!-- TODO -->
+- R302: View Project Forum ```/dashboard_my_projects/{id}/{idProject}/project_forum``` <!-- TODO -->
+- R303: View Project Options ```/dashboard_my_projects/{id}/{idProject}/project_options``` <!-- TODO -->
 - R304: Create Project Form ```/dashboard/new_project``` <!-- TODO -->
 - R305: Create Project Action ```/dashboard/new_project``` <!-- TODO -->
-- R306: Create Project Action ```/dashboard/new_project``` <!-- TODO -->
-- R307: View Project Members ```/dashboard_my_projects/'project_name'/project_members``` <!-- TODO -->
-- R308: Remove Project Members Action ```/dashboard_my_projects/'project_name'/project_manage_members``` <!-- TODO -->
-- R309: Edit Project Members Action ```/dashboard_my_projects/'project_name'/project_manage_members``` <!-- TODO -->
-- R310: Create Project Task Form ```/dashboard_my_projects/'project_name'/create_task```
-- R311: Remove Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
-- R312: Edit Project Task Form ```/dashboard_my_projects/'project_name'/project_manage_tasks```
-- R313: Edit Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
-- R314: View Project Options ```/dashbaord_my_projects/'project_name'/project_options```
-- R315: Browse Files Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R316: Upload Files Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R317: Edit Project Name Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R318: Edit Project Description Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R319: Save Project Changes Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R306: View Project Members ```/dashboard_my_projects/{id}/{idProject}/project_members``` <!-- TODO -->
+- R307: Delete Project Members ```/dashboard_my_projects/{id}/{idProject}/project_manage_members``` <!-- TODO -->
+- R308: Edit Project Members Form ```/dashboard_my_projects/{id}/{idProject}/project_manage_members/``` <!-- TODO -->
+- R308: Edit Project Members Action ```/dashboard_my_projects/{id}/{idProject}/project_manage_members``` <!-- TODO -->
+- R309: Create Project Task Form ```/dashboard_my_projects/'project_name'/create_task```
+- R310: Remove Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
+- R311: Edit Project Task Form ```/dashboard_my_projects/'project_name'/project_manage_tasks```
+- R312: Edit Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
+- R313: View Project Options ```/dashbaord_my_projects/'project_name'/project_options```
+- R314: Browse Files Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R315: Upload Files Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R316: Edit Project Name Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R317: Edit Project Description Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R318: Save Project Changes Action ```/dashbaord_my_projects/'project_name'/project_options```
 
 #### R301: View Project Tasks
 <table>
   <tr>
     <th>URL</th>
-    <td>/dashboard_my_projects/{id}/{idProject}/tasks</td>
-  </tr>
-  <tr>
-    <th>Description</th>
-    <td>Shows user's tasks.</td>
-  </tr>
-  <tr>
-    <th>Method</th>
-    <td>GET</td>
-  </tr>
-  <tr>
-    <th>Parameters</th>
-    <td>+id:integer</td>
-    <td>User primary key</td>
-  </tr>
-  <tr>
-    <td>+idProject:integer</td>
-    <td>Project primary key</td>
-  </tr>
-  <tr>
-    <th>UI</th>
-    <td> --TODO-- </td>
-  </tr>
-  <tr>
-    <th>Permissions</th>
-    <td>USR</td>
-  </tr>
-</table>
-
-#### R301: View Project Tasks
-<table>
-  <tr>
-    <th>URL</th>
-    <td colspan="2">/dashboard_my_projectss/{id}/{idProject}/tasks</td>
+    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/tasks</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -567,10 +534,10 @@ The architecture of the web application to develop is documented indicating the 
   </tr>
   <tr>
     <th>Method</th>
-    <td>GET</td>
+    <td colspan="2">GET</td>
   </tr>
   <tr>
-    <th>Parameters</th>
+    <th rowspan="2">Parameters</th>
     <td>+id:integer</td>
     <td>User primary key</td>
   </tr>
@@ -584,9 +551,220 @@ The architecture of the web application to develop is documented indicating the 
   </tr>
   <tr>
     <th>Permissions</th>
+    <td colspan="2">MEM</td>
+  </tr>
+</table>
+
+#### R302: View Project Forum
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/project_forum</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Shows project forum.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">GET</td>
+  </tr>
+  <tr>
+    <th rowspan="2">Parameters</th>
+    <td>+id:integer</td>
+    <td>User primary key</td>
+  </tr>
+  <tr>
+    <td>+idProject:integer</td>
+    <td>Project primary key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"> --TODO-- </td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">MEM</td>
+  </tr>
+</table>
+
+#### R303: View Project Options
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/project_options</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Shows project options.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">GET</td>
+  </tr>
+  <tr>
+    <th rowspan="2">Parameters</th>
+    <td>+id:integer</td>
+    <td>User primary key</td>
+  </tr>
+  <tr>
+    <td>+idProject:integer</td>
+    <td>Project primary key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"> --TODO-- </td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">MEM</td>
+  </tr>
+</table>
+
+#### R304: Create Project Form
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/new_project</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Page with a form to create a new project.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">GET</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"> --TODO-- </td>
+  </tr>
+  <tr>
+    <th>Submit</th>
+    <td>R305</th>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">MEM</td>
+  </tr>
+</table>
+
+#### R305: Create Project Action
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard/new_project</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">This web resource logs a new project into the system. Redirects to the new project page page on success and the create project form on failure.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">POST</td>
+  </tr>
+  <tr>
+    <th rowspan="4">Request Body</th>
+    <td>+name: string</td>
+    <td>Project name</td>
+  </tr>
+  <tr>
+    <td>+description: string</td>
+    <td>Project description</td>
+  </tr>
+    <tr>
+    <td>+Type</td>
+    <td>Project type (public or private)</td>
+  </tr>
+    <tr>
+    <td>+img: string?</td>
+    <td>Project thumbnail picture</td>
+  </tr>
+  <tr>
+    <th>Submit</th>
+    <td>R305</th>
+  </tr>
+  <tr>
+    <th>Permissions</th>
     <td colspan="2">USR</td>
   </tr>
 </table>
+
+#### R306: View Project Members
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/project_members</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">Shows project members.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">GET</td>
+  </tr>
+  <tr>
+    <th rowspan="2">Parameters</th>
+    <td>+id:integer</td>
+    <td>User primary key</td>
+  </tr>
+  <tr>
+    <td>+idProject:integer</td>
+    <td>Project primary key</td>
+  </tr>
+  <tr>
+    <th>UI</th>
+    <td colspan="2"> --TODO-- </td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">MEM</td>
+  </tr>
+</table>
+
+#### R307: Delete Project Member
+<table>
+  <tr>
+    <th>URL</th>
+    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/project_manage_members</td>
+  </tr>
+  <tr>
+    <th>Description</th>
+    <td colspan="2">This web resource logs a new project into the system. Redirects to the new project page page on success and the create project form on failure.</td>
+  </tr>
+  <tr>
+    <th>Method</th>
+    <td colspan="2">Delete</td>
+  </tr>
+  <tr>
+    <th rowspan="3">Parameters</th>
+    <td>+id:integer</td>
+    <td>User primary key</td>
+  </tr>
+  <tr>
+    <td>+idProject:integer</td>
+    <td>Project primary key</td>
+  </tr>
+  <tr>
+    <td>+idMember:integer</td>
+    <td>Project member primary key</td>
+  </tr>
+  <tr>
+    <th rowspan="2">Redirects</th>
+    <td>R306</th>
+    <td>Success</td>
+  </tr>
+  <tr>
+    <td>R306</th>
+    <td>Error</td>
+  </tr>
+  <tr>
+    <th>Permissions</th>
+    <td colspan="2">OWN, COO</td>
+  </tr>
+</table>
+
 
 ### 3.4 Module M04: Search Engine
 
