--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -1,26 +1,34 @@
 # A7: High-level architecture. Privileges. Web resources specification
 
-The architecture of the web application to develop is documented indicating the catalogue of resources and the properties of each resource, including: references to the graphical interfaces, and the format of JSON responses.
+The architecture of our **Project Management** web application to develop is documented indicating the catalogue of resources and the properties of each resource, including: references to the graphical interfaces, and the format of JSON responses.
 
 ## 1. Overview
 <!-- > Identify and overview the modules that will be part of the application. -->
 
 <table>
   <tr>
-    <th>M01: </th>
-    <td>Visitor</td>
+    <th>M01: Authentication and Individual Profile</th>
+    <td>Web resources associated with user authentication and individual profile management, includes the following system features: login/logout, registration, view and edit personal profile information.</td>
   </tr>
   <tr>
-    <th>M02</th>
-    <td>Authenticated User</td>
+    <th>M02: Dashboard</th>
+    <td>Web resources associated with user projects and individual tasks.</td>
   </tr>
   <tr>
-    <th>M03</th>
-    <td>Premium Authenticated User</td>
+    <th>M03: Projects and Project Settings</th>
+    <td>Web resources associated with project management.</td>
   </tr>
   <tr>
-    <th>M04</th>
-    <td>Project Member</td>
+    <th>M04: Search Engines</th>
+    <td>Web resources associated with searching for users, projects, and tasks (public or private if the user has access).</td>
+  </tr>
+  <tr>
+    <th>M05: Administration</th>
+    <td>Web resources associated with website management, specifically: view, edit and remove users/projects/tasks/comments.</td>
+  </tr>
+  <tr>
+    <th>M06: Static Pages</th>
+    <td>Web resources associated with static content of website.</td>
   </tr>
 </table>
 
@@ -768,6 +776,8 @@ The architecture of the web application to develop is documented indicating the 
 
 ### 3.4 Module M04: Search Engine
 
+#### Endpoints of Module Search Engine
+
 - R401: Search Projects Action ```/search_projects```
 - R402: Search Users Action ```/search_users```
 - R403: Search Tasks Action ```/search_tasks```
@@ -872,6 +882,8 @@ The architecture of the web application to develop is documented indicating the 
 </table>
 
 ### 3.5 Module M05: Administration
+
+#### Endpoints of Module Administration
 
 - R501: Admin Login Form ```/admin```
 - R502: Admin Login Action ```/admin```
@@ -1169,6 +1181,8 @@ The architecture of the web application to develop is documented indicating the 
 </table>
 
 ### 3.6 Module M06: Static Pages
+
+#### Endpoints of Module Static Pages
 
 - R501: About Page ```/about```
 - R502: Contact Page ```/contact```
