edit profile action

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -82,7 +82,7 @@ The architecture of the web application to develop is documented indicating the 
 - R105: Register Action ```/``` <!-- TODO -->
 - R106: View Profile ```/profile/{id}```
 - R107: Edit Profile Modal ```/profile```
-- R108: Edit Profile Action ```/profile/edit/{id}``` <!-- TODO -->
+- R108: Edit Profile Action ```/profile/{id}/edit``` <!-- TODO -->
 
 #### R101: Login Modal
 <table>
