fixed links and table parameters

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -414,15 +414,15 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Dashboard
 
-- R201: Dashboard Page```/dashboard/{id}```
-- R202: View Projects ```/dashboard_my_projects/{id}```
-- R203: View Tasks ```/dashboard_tasks/{id}```
+- R201: Dashboard Page```/dashboard```
+- R202: View Projects ```/dashboard/my_projects```
+- R203: View Tasks ```/dashboard/tasks```
 
 #### R201: Dashboard Page
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/{id}</td>
+    <td colspan="2">/dashboard</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -431,11 +431,6 @@ The architecture of our **Project Management** web application to develop is doc
   <tr>
     <th>Method</th>
     <td colspan="2">GET</td>
-  </tr>
-  <tr>
-    <th>Parameters</th>
-    <td>+id:integer</td>
-    <td>User primary key</td>
   </tr>
   <tr>
     <th>UI</th>
@@ -451,7 +446,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard_my_projects/{id}</td>
+    <td colspan="2">/dashboard/my_projects</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -460,11 +455,6 @@ The architecture of our **Project Management** web application to develop is doc
   <tr>
     <th>Method</th>
     <td colspan="2">GET</td>
-  </tr>
-  <tr>
-    <th>Parameters</th>
-    <td>+id:integer</td>
-    <td>User primary key</td>
   </tr>
   <tr>
     <th>UI</th>
@@ -480,7 +470,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard_my_tasks/{id}</td>
+    <td colspan="2">/dashboard/tasks</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -489,11 +479,6 @@ The architecture of our **Project Management** web application to develop is doc
   <tr>
     <th>Method</th>
     <td colspan="2">GET</td>
-  </tr>
-  <tr>
-    <th>Parameters</th>
-    <td>+id:integer</td>
-    <td>User primary key</td>
   </tr>
   <tr>
     <th>UI</th>
@@ -510,31 +495,31 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Projects and Project Settings
 
-- R301: View Project Tasks ```/dashboard_my_projects/{id}/{idProject}/tasks``` <!-- TODO -->
-- R302: View Project Forum ```/dashboard_my_projects/{id}/{idProject}/project_forum``` <!-- TODO -->
-- R303: View Project Options ```/dashboard_my_projects/{id}/{idProject}/project_options``` <!-- TODO -->
+- R301: View Project Tasks ```/dashboard/my_projects/{idProject}/tasks``` <!-- TODO -->
+- R302: View Project Forum ```/dashboard/my_projects/{idProject}/project_forum``` <!-- TODO -->
+- R303: View Project Options ```/dashboard/my_projects/{idProject}/project_options``` <!-- TODO -->
 - R304: Create Project Form ```/dashboard/new_project``` <!-- TODO -->
 - R305: Create Project Action ```/dashboard/new_project``` <!-- TODO -->
-- R306: View Project Members ```/dashboard_my_projects/{id}/{idProject}/project_members``` <!-- TODO -->
-- R307: Delete Project Members ```/dashboard_my_projects/{id}/{idProject}/project_manage_members``` <!-- TODO -->
-- R308: Edit Project Members Form ```/dashboard_my_projects/{id}/{idProject}/project_manage_members/``` <!-- TODO -->
-- R308: Edit Project Members Action ```/dashboard_my_projects/{id}/{idProject}/project_manage_members``` <!-- TODO -->
-- R309: Create Project Task Form ```/dashboard_my_projects/'project_name'/create_task```
-- R310: Remove Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
-- R311: Edit Project Task Form ```/dashboard_my_projects/'project_name'/project_manage_tasks```
-- R312: Edit Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
-- R313: View Project Options ```/dashbaord_my_projects/'project_name'/project_options```
-- R314: Browse Files Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R315: Upload Files Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R316: Edit Project Name Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R317: Edit Project Description Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R318: Save Project Changes Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R306: View Project Members ```/dashboard/my_projects/{idProject}/project_members``` <!-- TODO -->
+- R307: Delete Project Members ```/dashboard/my_projects/{idProject}/project_manage_members``` <!-- TODO -->
+- R308: Edit Project Members Form ```/dashboard/my_projects/{idProject}/project_manage_members/``` <!-- TODO -->
+- R308: Edit Project Members Action ```/dashboard/my_projects/{idProject}/project_manage_members``` <!-- TODO -->
+- R309: Create Project Task Form ```/dashboard/my_projects/{idProject}/create_task```
+- R310: Remove Project Task Action ```/dashboard/my_projects/{idProject}/project_manage_tasks```
+- R311: Edit Project Task Form ```/dashboard/my_projects/{idProject}/project_manage_tasks```
+- R312: Edit Project Task Action ```/dashboard/my_projects/{idProject}/project_manage_tasks```
+- R313: View Project Options ```/dashboard_my_projects/{idProject}/project_options```
+- R314: Browse Files Action ```/dashboard_my_projects/{idProject}/project_options```
+- R315: Upload Files Action ```/dashboard_my_projects/{idProject}/project_options```
+- R316: Edit Project Name Action ```/dashboard_my_projects/{idProject}/project_options```
+- R317: Edit Project Description Action ```/dashboard_my_projects/{idProject}/project_options```
+- R318: Save Project Changes Action ```/dashboard_my_projects/{idProject}/project_options```
 
 #### R301: View Project Tasks
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/tasks</td>
+    <td colspan="2">/dashboard/my_projects/{idProject}/tasks</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -545,17 +530,13 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2">GET</td>
   </tr>
   <tr>
-    <th rowspan="2">Parameters</th>
-    <td>+id:integer</td>
-    <td>User primary key</td>
-  </tr>
-  <tr>
+    <th>Parameters</th>
     <td>+idProject:integer</td>
     <td>Project primary key</td>
   </tr>
   <tr>
     <th>UI</th>
-    <td colspan="2"> --TODO-- </td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui11-project-tasks">UI11</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -567,7 +548,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/project_forum</td>
+    <td colspan="2">/dashboard/my_projects/{idProject}/project_forum</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -578,17 +559,13 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2">GET</td>
   </tr>
   <tr>
-    <th rowspan="2">Parameters</th>
-    <td>+id:integer</td>
-    <td>User primary key</td>
-  </tr>
-  <tr>
+    <th>Parameters</th>
     <td>+idProject:integer</td>
     <td>Project primary key</td>
   </tr>
   <tr>
     <th>UI</th>
-    <td colspan="2"> --TODO-- </td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui12-project-forum">UI12</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -600,7 +577,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/project_options</td>
+    <td colspan="2">/dashboard/my_projects/{idProject}/project_options</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -611,17 +588,13 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2">GET</td>
   </tr>
   <tr>
-    <th rowspan="2">Parameters</th>
-    <td>+id:integer</td>
-    <td>User primary key</td>
-  </tr>
-  <tr>
+    <th>Parameters</th>
     <td>+idProject:integer</td>
     <td>Project primary key</td>
   </tr>
   <tr>
     <th>UI</th>
-    <td colspan="2"> --TODO-- </td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui14-project-options">UI14</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -645,7 +618,7 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
   <tr>
     <th>UI</th>
-    <td colspan="2"> --TODO-- </td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui10-new-project">UI10</a></td>
   </tr>
   <tr>
     <th>Submit</th>
@@ -702,7 +675,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/project_members</td>
+    <td colspan="2">/dashboard/my_projects/{idProject}/project_members</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -713,17 +686,13 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2">GET</td>
   </tr>
   <tr>
-    <th rowspan="2">Parameters</th>
-    <td>+id:integer</td>
-    <td>User primary key</td>
-  </tr>
-  <tr>
+    <th>Parameters</th>
     <td>+idProject:integer</td>
     <td>Project primary key</td>
   </tr>
   <tr>
     <th>UI</th>
-    <td colspan="2"> --TODO-- </td>
+    <td colspan="2"><a href="https://github.com/mpcmarques/lbaw1743/blob/master/artifacts/A3/A3.md#ui13-project-members">UI13</a></td>
   </tr>
   <tr>
     <th>Permissions</th>
@@ -735,7 +704,7 @@ The architecture of our **Project Management** web application to develop is doc
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard_my_projects/{id}/{idProject}/project_manage_members</td>
+    <td colspan="2">/dashboard/my_projects/{idProject}/project_manage_members</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -746,17 +715,9 @@ The architecture of our **Project Management** web application to develop is doc
     <td colspan="2">Delete</td>
   </tr>
   <tr>
-    <th rowspan="3">Parameters</th>
-    <td>+id:integer</td>
-    <td>User primary key</td>
-  </tr>
-  <tr>
+    <th>Parameters</th>
     <td>+idProject:integer</td>
     <td>Project primary key</td>
-  </tr>
-  <tr>
-    <td>+idMember:integer</td>
-    <td>Project member primary key</td>
   </tr>
   <tr>
     <th rowspan="2">Redirects</th>
@@ -1367,3 +1328,4 @@ GROUP1743, 08/04/2018
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt
 > João Pedro Teixeira Pereira de Sá, up201506252@fe.up.pt
 > Mário Rui Macedo Flores dos Santos, up201503406@fe.up.pt
+
