--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -510,27 +510,84 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Projects and Project Settings
 
-- R301: View Project Tasks ```/dashboard_my_projects/{id}/{idProject}/tasks``` <!-- TODO -->
-- R302: View Project Forum ```/dashboard_my_projects/{id}/{idProject}/project_forum``` <!-- TODO -->
-- R303: View Project Options ```/dashboard_my_projects/{id}/{idProject}/project_options``` <!-- TODO -->
-- R304: Create Project Form ```/dashboard/new_project``` <!-- TODO -->
-- R305: Create Project Action ```/dashboard/new_project``` <!-- TODO -->
-- R306: View Project Members ```/dashboard_my_projects/{id}/{idProject}/project_members``` <!-- TODO -->
-- R307: Delete Project Members ```/dashboard_my_projects/{id}/{idProject}/project_manage_members``` <!-- TODO -->
-- R308: Edit Project Members Form ```/dashboard_my_projects/{id}/{idProject}/project_manage_members/``` <!-- TODO -->
-- R308: Edit Project Members Action ```/dashboard_my_projects/{id}/{idProject}/project_manage_members``` <!-- TODO -->
-- R309: Create Project Task Form ```/dashboard_my_projects/'project_name'/create_task```
-- R310: Remove Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
-- R311: Edit Project Task Form ```/dashboard_my_projects/'project_name'/project_manage_tasks```
-- R312: Edit Project Task Action ```/dashboard_my_projects/'project_name'/project_manage_tasks```
-- R313: View Project Options ```/dashbaord_my_projects/'project_name'/project_options```
-- R314: Browse Files Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R315: Upload Files Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R316: Edit Project Name Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R317: Edit Project Description Action ```/dashbaord_my_projects/'project_name'/project_options```
-- R318: Save Project Changes Action ```/dashbaord_my_projects/'project_name'/project_options```
+- R301: View Project Tasks
+
+```/dashboard/my_projects/{idProject}/tasks```
+
+- R302: View Project Forum
+
+```/dashboard/my_projects/{idProject}/forum```
+
+- R303: View Project Options
+
+```/dashboard/my_projects/{idProject}/options```
+
+- R304: Create Project Form
+
+```/dashboard/new_project```
+
+- R305: Create Project Action
+
+```/dashboard/new_project```
+
+- R306: View Project Members
+
+```/dashboard/my_projects/{idProject}/members```
+
+- R307: Delete Project Members
+
+```/dashboard/my_projects/{idProject}/manage_members```
+
+- R308: Edit Project Members Form
+
+```/dashboard/my_projects/{idProject}/manage_members/```
+
+- R308: Edit Project Members Action
+
+```/dashboard_my_projects/{idProject}/manage_members```
+
+- R309: Create Project Task Form
+
+```/dashboard/my_projects/{idProject}/create_task```
+
+- R310: Remove Project Task Action
+
+```/dashboard/my_projects/{idProject}/manage_tasks```
+
+- R311: Edit Project Task Form
+
+```/dashboard/my_projects/{idProject}/manage_tasks```
+
+- R312: Edit Project Task Action
+
+```/dashboard/my_projects/{idProject}/manage_tasks```
+
+- R313: View Project Options
+
+```/dashboard/my_projects/{idProject}/options```
+
+- R314: Browse Files Action
+
+```/dashboard/my_projects/{idProject}/options```
+
+- R315: Upload Files Action
+
+```/dashboard/my_projects/{idProject}/options```
+
+- R316: Edit Project Name Action
+
+```/dashboard/my_projects/{idProject}/options```
+
+- R317: Edit Project Description Action
+
+```/dashbaord/my_projects/{idProject}/options```
+
+- R318: Save Project Changes Action
+
+```/dashboard/my_projects/{idProject}/options```
 
 #### R301: View Project Tasks
+
 <table>
   <tr>
     <th>URL</th>
