improved design :art:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -495,81 +495,43 @@ The architecture of our **Project Management** web application to develop is doc
 
 #### Endpoints of Module Projects and Project Settings
 
-- R301: View Project Tasks
+- R301: View Project Tasks ```/dashboard/my_projects/{idProject}/tasks```
 
-```/dashboard/my_projects/{idProject}/tasks```
+- R302: View Project Forum ```/dashboard/my_projects/{idProject}/forum```
 
-- R302: View Project Forum
+- R303: View Project Options ```/dashboard/my_projects/{idProject}/options```
 
-```/dashboard/my_projects/{idProject}/forum```
+- R304: Create Project Form ```/dashboard/new_project```
 
-- R303: View Project Options
+- R305: Create Project Action ```/dashboard/new_project```
 
-```/dashboard/my_projects/{idProject}/options```
+- R306: View Project Members ```/dashboard/my_projects/{idProject}/members```
 
-- R304: Create Project Form
+- R307: Delete Project Members ```/dashboard/my_projects/{idProject}/manage_members```
 
-```/dashboard/new_project```
+- R308: Edit Project Members Form ```/dashboard/my_projects/{idProject}/manage_members/```
 
-- R305: Create Project Action
+- R308: Edit Project Members Action ```/dashboard_my_projects/{idProject}/manage_members```
 
-```/dashboard/new_project```
+- R309: Create Project Task Form ```/dashboard/my_projects/{idProject}/create_task```
 
-- R306: View Project Members
+- R310: Remove Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
 
-```/dashboard/my_projects/{idProject}/members```
+- R311: Edit Project Task Form ```/dashboard/my_projects/{idProject}/manage_tasks```
 
-- R307: Delete Project Members
+- R312: Edit Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
 
-```/dashboard/my_projects/{idProject}/manage_members```
+- R313: View Project Options ```/dashboard/my_projects/{idProject}/options```
 
-- R308: Edit Project Members Form
+- R314: Browse Files Action ```/dashboard/my_projects/{idProject}/options```
 
-```/dashboard/my_projects/{idProject}/manage_members/```
+- R315: Upload Files Action ```/dashboard/my_projects/{idProject}/options```
 
-- R308: Edit Project Members Action
+- R316: Edit Project Name Action ```/dashboard/my_projects/{idProject}/options```
 
-```/dashboard_my_projects/{idProject}/manage_members```
+- R317: Edit Project Description Action ```/dashbaord/my_projects/{idProject}/options```
 
-- R309: Create Project Task Form
-
-```/dashboard/my_projects/{idProject}/create_task```
-
-- R310: Remove Project Task Action
-
-```/dashboard/my_projects/{idProject}/manage_tasks```
-
-- R311: Edit Project Task Form
-
-```/dashboard/my_projects/{idProject}/manage_tasks```
-
-- R312: Edit Project Task Action
-
-```/dashboard/my_projects/{idProject}/manage_tasks```
-
-- R313: View Project Options
-
-```/dashboard/my_projects/{idProject}/options```
-
-- R314: Browse Files Action
-
-```/dashboard/my_projects/{idProject}/options```
-
-- R315: Upload Files Action
-
-```/dashboard/my_projects/{idProject}/options```
-
-- R316: Edit Project Name Action
-
-```/dashboard/my_projects/{idProject}/options```
-
-- R317: Edit Project Description Action
-
-```/dashbaord/my_projects/{idProject}/options```
-
-- R318: Save Project Changes Action
-
-```/dashboard/my_projects/{idProject}/options```
+- R318: Save Project Changes Action ```/dashboard/my_projects/{idProject}/options```
 
 #### R301: View Project Tasks
 
