fixed typos, added TODOs :art:

--- a/artifacts/A7/A7.md
+++ b/artifacts/A7/A7.md
@@ -509,27 +509,27 @@ The architecture of our **Project Management** web application to develop is doc
 
 - R307: Delete Project Members ```/dashboard/my_projects/{idProject}/manage_members```
 
-- R308: Edit Project Members Form ```/dashboard/my_projects/{idProject}/manage_members/```
+- R308: Edit Project Members Form ```/dashboard/my_projects/{idProject}/manage_members```
 
-- R308: Edit Project Members Action ```/dashboard_my_projects/{idProject}/manage_members```
+- R309: Edit Project Members Action ```/dashboard_my_projects/{idProject}/manage_members```
 
-- R309: Create Project Task Form ```/dashboard/my_projects/{idProject}/create_task```
+- R310: Create Project Task Form ```/dashboard/my_projects/{idProject}/create_task```
 
-- R310: Remove Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
+- R311: Remove Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
 
-- R311: Edit Project Task Form ```/dashboard/my_projects/{idProject}/manage_tasks```
+- R312: Edit Project Task Form ```/dashboard/my_projects/{idProject}/manage_tasks```
 
-- R312: Edit Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
+- R313: Edit Project Task Action ```/dashboard/my_projects/{idProject}/manage_tasks```
 
-- R313: View Project Options ```/dashboard/my_projects/{idProject}/options```
+- R314: View Project Options ```/dashboard/my_projects/{idProject}/options```
 
-- R314: Browse Files Action ```/dashboard/my_projects/{idProject}/options```
+- R315: Browse Files Action ```/dashboard/my_projects/{idProject}/options```
 
-- R315: Upload Files Action ```/dashboard/my_projects/{idProject}/options```
+- R316: Upload Files Action ```/dashboard/my_projects/{idProject}/options```
 
-- R316: Edit Project Name Action ```/dashboard/my_projects/{idProject}/options```
+- R317: Edit Project Name Action ```/dashboard/my_projects/{idProject}/options```
 
-- R317: Edit Project Description Action ```/dashbaord/my_projects/{idProject}/options```
+- R318: Edit Project Description Action ```/dashbaord/my_projects/{idProject}/options```
 
 - R318: Save Project Changes Action ```/dashboard/my_projects/{idProject}/options```
 
@@ -564,10 +564,11 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R302: View Project Forum
+
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/project_forum</td>
+    <td colspan="2">/dashboard/my_projects/{idProject}/forum</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -593,10 +594,11 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R303: View Project Options
+
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/project_options</td>
+    <td colspan="2">/dashboard/my_projects/{idProject}/options</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -622,6 +624,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R304: Create Project Form
+
 <table>
   <tr>
     <th>URL</th>
@@ -650,6 +653,7 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R305: Create Project Action
+
 <table>
   <tr>
     <th>URL</th>
@@ -691,10 +695,11 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R306: View Project Members
+
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/project_members</td>
+    <td colspan="2">/dashboard/my_projects/{idProject}/members</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -720,10 +725,11 @@ The architecture of our **Project Management** web application to develop is doc
 </table>
 
 #### R307: Delete Project Member
+
 <table>
   <tr>
     <th>URL</th>
-    <td colspan="2">/dashboard/my_projects/{idProject}/project_manage_members</td>
+    <td colspan="2">/dashboard/my_projects/{idProject}/manage_members</td>
   </tr>
   <tr>
     <th>Description</th>
@@ -753,6 +759,49 @@ The architecture of our **Project Management** web application to develop is doc
   </tr>
 </table>
 
+### R308: Edit Project Members Form
+
+<!-- TODO: /dashboard/my_projects/{idProject}/manage_members -->
+
+### R309: Edit Project Members Action
+
+<!-- TODO: /dashboard/my_projects/{idProject}/manage_members -->
+
+### R310: Create Project Task Form
+
+<!-- TODO: /dashboard/my_projects/{idProject}/create_task -->
+
+### R311: Remove Project Task Form
+
+<!-- TODO: /dashboard/my_projects/{idProject}/manage_tasks -->
+
+### R312: Edit Project Task Form
+
+<!-- TODO: /dashboard/my_projects/{idProject}/manage_tasks -->
+
+### R313: Edit Project Task Action
+
+<!-- TODO: /dashboard/my_projects/{idProject}/manage_tasks -->
+
+### R314: View Project Options
+
+<!-- TODO: /dashboard/my_projects/{idProject}/options -->
+
+### R315: Upload Files Action
+
+<!-- TODO: /dashboard/my_projects/{idProject}/options -->
+
+### R316: Edit Project Description Action
+
+<!-- TODO: /dashboard/my_projects/{idProject}/options -->
+
+### R317: Edit Project Description Action
+
+<!-- TODO: /dashboard/my_projects/{idProject}/options -->
+
+### R318: Save Project Changes Action
+
+<!-- TODO: /dashboard/my_projects/{idProject}/options -->
 
 ### 3.4 Module M04: Search Engine
 
